--- a/php/v2/Dockerfile
+++ b/php/v2/Dockerfile
@@ -1,6 +1,10 @@
 FROM php:7.1-cli
 
+RUN apt-get update && apt-get install -y git unzip
+
+COPY --from=composer:2.2 /usr/bin/composer /usr/bin/composer
+
 WORKDIR /var/www/html
 
 EXPOSE 8080
-CMD ["php", "-S", "127.0.0.1:8080"]
+CMD ["php", "-S", "0.0.0.0:8080"]
