--- a/php/v2/composer.json
+++ b/php/v2/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "NodaSoft\\": "src/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
     }
