--- a/php/v2/composer.json
+++ b/php/v2/composer.json
@@ -4,6 +4,11 @@
             "NodaSoft\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
     }
