--- a/php/v2/composer.json
+++ b/php/v2/composer.json
@@ -10,6 +10,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "phpstan/phpstan": "^1.4"
     }
 }
