--- a/golang/scripts/makefile
+++ b/golang/scripts/makefile
@@ -1,7 +1,9 @@
-include ./.env
 
-export $(shell sed 's/=.*//' .env)
+WORKDIR ?= $(shell pwd)/..
+DOT_ENV ?= ${WORKDIR}/internal/config/.env
+include ${DOT_ENV}
+export $(shell sed 's/=.*//' ${DOT_ENV})
 
 default:
-	go build -mod=vendor -o ../bin/main ../cmd/main.go
-	../bin/main
+	go build -mod=vendor -o ${WORKDIR}/bin/main ${WORKDIR}/cmd/main.go
+	${WORKDIR}/bin/main
